# snact

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  LICENSE  README.md  install.ps1  install.sh
.claude/: settings.json
.claude/hooks/: auto-release.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/snact-cdp/: Cargo.toml
crates/snact-cdp/src/: browser.rs  commands.rs  error.rs  lib.rs  transport.rs  types.rs
crates/snact-cli/: Cargo.toml
crates/snact-cli/src/: main.rs  validate.rs
crates/snact-cli/src/cmd/: action.rs  browser.rs  mcp.rs  mod.rs  read.rs  record.rs  replay.rs  schema.rs  session.rs  snap.rs
crates/snact-core/: Cargo.toml
crates/snact-core/src/: data_dir.rs  element_map.rs  lib.rs
crates/snact-core/src/action/: click.rs  fill.rs  mod.rs  screenshot.rs  scroll.rs  select.rs  type_text.rs  wait.rs
crates/snact-core/src/read/: mod.rs
crates/snact-core/src/record/: mod.rs  recorder.rs  replay.rs  workflow.rs
crates/snact-core/src/session/: mod.rs  profile.rs  storage.rs
crates/snact-core/src/snap/: compressor.rs  extractor.rs  filter.rs  mod.rs
scripts/: pre-push-version-bump.sh  setup-hooks.sh
