[workspace]
resolver = "2"
members = [
    "crates/snact-cdp",
    "crates/snact-core",
    "crates/snact-cli",
]

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# workspace crates
snact-cdp = { path = "crates/snact-cdp" }
snact-core = { path = "crates/snact-core" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
