[package]
name = "snact-cdp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
http = "1"
futures-util = "0.3"
